@@ -1,14 +1,12 @@
 package school.hei.haapi.integration;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.springframework.boot.test.context.SpringBootTest.WebEnvironment.RANDOM_PORT;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static school.hei.haapi.integration.StudentIT.student1;
 import static school.hei.haapi.integration.StudentIT.student2;
 import static school.hei.haapi.integration.StudentIT.student3;
 import static school.hei.haapi.integration.conf.TestUtils.MANAGER1_TOKEN;
 import static school.hei.haapi.integration.conf.TestUtils.TEACHER1_TOKEN;
-import static school.hei.haapi.integration.conf.TestUtils.anAvailableRandomPort;
 import static school.hei.haapi.integration.conf.TestUtils.assertThrowsApiException;
 import static school.hei.haapi.integration.conf.TestUtils.awardedCourse1;
 import static school.hei.haapi.integration.conf.TestUtils.course1;
@@ -27,10 +25,6 @@ import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.ContextConfiguration;
-import org.testcontainers.junit.jupiter.Testcontainers;
 import school.hei.haapi.endpoint.event.model.CheckAttendanceTriggered;
 import school.hei.haapi.endpoint.rest.api.AttendanceApi;
 import school.hei.haapi.endpoint.rest.client.ApiClient;
@@ -43,22 +37,17 @@ import school.hei.haapi.endpoint.rest.model.CreateAttendanceMovement;
 import school.hei.haapi.endpoint.rest.model.PlaceEnum;
 import school.hei.haapi.endpoint.rest.model.StudentAttendance;
 import school.hei.haapi.endpoint.rest.model.StudentAttendanceMovement;
-import school.hei.haapi.integration.conf.AbstractContextInitializer;
-import school.hei.haapi.integration.conf.MockedThirdParties;
+import school.hei.haapi.integration.conf.FacadeITMockedThirdParties;
 import school.hei.haapi.integration.conf.TestUtils;
 import school.hei.haapi.service.event.CheckAttendanceTriggeredService;
 
-@SpringBootTest(webEnvironment = RANDOM_PORT)
-@Testcontainers
-@ContextConfiguration(initializers = AttendanceIT.ContextInitializer.class)
-@AutoConfigureMockMvc
-class AttendanceIT extends MockedThirdParties {
+class AttendanceIT extends FacadeITMockedThirdParties {
   private static final Instant DEFAULT_FROM = Instant.parse("2021-08-07T07:30:00.00Z");
   private static final Instant DEFAULT_TO = Instant.parse("2021-11-09T07:30:00.00Z");
   @Autowired CheckAttendanceTriggeredService checkAttendanceTriggeredService;
 
-  private static ApiClient anApiClient(String token) {
-    return TestUtils.anApiClient(token, ContextInitializer.SERVER_PORT);
+  private ApiClient anApiClient(String token) {
+    return TestUtils.anApiClient(token, localPort);
   }
 
   @BeforeEach
@@ -102,7 +91,7 @@ class AttendanceIT extends MockedThirdParties {
 
     // GET
     // /attendance?page=1&page_size=10&courses_ids=course1_id,course2_id&attendance_statuses=MISSING&from={DEFAULT_FROM}&to={DEFAULT_TO}
-    List<StudentAttendance> actualWithCourse1Idand2IdAndMissing =
+    List<StudentAttendance> actualWithCourse1IdAnd2IdAndMissing =
         api.getStudentsAttendance(
             1,
             10,
@@ -112,9 +101,9 @@ class AttendanceIT extends MockedThirdParties {
             DEFAULT_FROM,
             DEFAULT_TO,
             List.of(AttendanceStatus.MISSING));
-    assertEquals(2, actualWithCourse1Idand2IdAndMissing.size());
+    assertEquals(2, actualWithCourse1IdAnd2IdAndMissing.size());
     assertTrue(
-        actualWithCourse1Idand2IdAndMissing.containsAll(
+        actualWithCourse1IdAnd2IdAndMissing.containsAll(
             List.of(attendance6Missing(), attendance5Missing())));
   }
 
@@ -163,7 +152,7 @@ class AttendanceIT extends MockedThirdParties {
             DEFAULT_TO,
             List.of(AttendanceStatus.MISSING));
     assertEquals(1, actualWithCourse2IdAndMissing.size());
-    assertTrue(actualWithCourse2IdAndMissing.containsAll(List.of(attendance6Missing())));
+    assertTrue(actualWithCourse2IdAndMissing.contains(attendance6Missing()));
   }
 
   @Test
@@ -201,14 +190,15 @@ class AttendanceIT extends MockedThirdParties {
             .student(student1())
             .attendanceMovementType(AttendanceMovementType.IN);
 
-    assertEquals(expected.getCreatedAt(), actual.get(0).getCreatedAt());
-    assertEquals(expected.getAttendanceMovementType(), actual.get(0).getAttendanceMovementType());
-    assertEquals(expected.getPlace(), actual.get(0).getPlace());
-    assertEquals(expected.getStudent(), actual.get(0).getStudent());
+    assertEquals(expected.getCreatedAt(), actual.getFirst().getCreatedAt());
+    assertEquals(
+        expected.getAttendanceMovementType(), actual.getFirst().getAttendanceMovementType());
+    assertEquals(expected.getPlace(), actual.getFirst().getPlace());
+    assertEquals(expected.getStudent(), actual.getFirst().getStudent());
   }
 
   @Test
-  void manager_create_attendance_with_no_student_id() throws ApiException {
+  void manager_create_attendance_with_no_student_id() {
     ApiClient manager1Client = anApiClient(MANAGER1_TOKEN);
     AttendanceApi api = new AttendanceApi(manager1Client);
 
@@ -337,14 +327,5 @@ class AttendanceIT extends MockedThirdParties {
         .attendanceMovementType(AttendanceMovementType.IN)
         .studentId("student_id_ko")
         .createdAt(Instant.parse("2021-11-08T07:30:00.00Z"));
-  }
-
-  static class ContextInitializer extends AbstractContextInitializer {
-    public static final int SERVER_PORT = anAvailableRandomPort();
-
-    @Override
-    public int getServerPort() {
-      return SERVER_PORT;
-    }
   }
 }
